--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
       white-space: pre-line !important;
       overflow: visible !important;
     }
-    .course-icon { font-size: 1.3em; margin-right: 2px; vertical-align: middle; }
+    .course-icon {
+      font-size: 1.3em;
+      margin-right: 2px;
+      vertical-align: middle;
+    }
     .highlight-red { color: #C00000 !important; font-weight: bold !important;}
-    .disabled-bg { background: #868686 !important; color: #fff !important; border-radius: 7px; border: none; }
-    .disabled-txt { color: #fff !important; }
-    .disabled-label { font-size:0.9em; background: #c0c0c0; color: #fff; border-radius: 0.6em; margin-left:0.2em; padding:0 0.4em;}
+    .disabled-bg { background: #888 !important; color: #fff !important; }
+    .disabled-txt { color: #fff !important; background: #888 !important; }
+    .disabled-tag { border-radius: 9px; padding: 0px 6px; background: #555; color: #fff; font-size: 0.8em; margin-left: 6px; }
     #list-container { max-width: 1100px; margin: 2em auto; }
     #list-container table { border-collapse: collapse; width: 100%; }
     #list-container th, #list-container td {
       border: 1px solid #aaa; padding: 0.5em; text-align: center; font-size: 1.08em;
     }
     #list-container th { background: #f4f4f4; font-size: 1.13em;}
-    .row-disabled td { background: #868686 !important; color: #fff !important;}
-    .row-disabled .disabled-label { background: #fff; color: #868686; }
     @media (max-width: 800px) {
       #calendar, #list-container { width: 100%; font-size: 0.96em;}
       #filter-bar { font-size: 1.1em;}
@@ -76,6 +78,7 @@ function fixDate(dateStr) {
   return dateStr;
 }
 function fixTime(t) {
+  // 移除"下午5:10"等文字，只保留 HH:mm 格式
   if (!t) return "";
   let m = t.match(/^(\d{1,2}):(\d{2})/);
   if (m) {
@@ -83,7 +86,8 @@ function fixTime(t) {
     return `${h}:${m[2]}`;
   }
   if (t.startsWith("1899") || t.startsWith("Invalid")) return "";
-  return t;
+  // 若有"上午"、"下午"等，也一律不顯示
+  return "";
 }
 function courseSortKey(courseName) {
   const match = courseName.match(/^([一二三])[上下]/);
@@ -131,83 +135,90 @@ function fieldClass(item, field) {
 }
 function getClass(item) {
   const result = [];
+  if (item.__isDisabled) result.push("disabled-bg");
   if (Number(item["當前堂數"]) >= Math.ceil(Number(item["總堂數"]) / 3)) result.push("critical");
   return result;
 }
 
-// 合併，且同時顯示被異動的課(設__disabled=true)與異動後的課
+// === 重點合併：同一課/教師/堂次，每天僅一筆；如有異動，顯示異動（紅），原本顯示灰底白字+註【已異動】===
 function mergeAndRenumber(data) {
-  const groups = {};
+  // key為「課程|教師|原始日期」，以便於比對異動
+  const records = {};
+  const disabled = [];
   data.forEach(item => {
-    const key = getCourseLabel(item) + '|' + (item["教師"]||"");
-    if (!groups[key]) groups[key] = [];
-    groups[key].push(item);
+    const key = [
+      getCourseLabel(item),
+      item["教師"]||"",
+      fixDate(item["日期"])
+    ].join('|');
+    // 若該筆資料有異動日期，則舊資料須disable
+    if (item["異動日期"]) {
+      // 先加入異動資料
+      const newKey = [
+        getCourseLabel(item),
+        item["教師"]||"",
+        fixDate(item["異動日期"])
+      ].join('|');
+      records[newKey] = {
+        ...item,
+        __displayDate: fixDate(item["異動日期"]),
+        __isDisabled: false
+      };
+      // 舊資料設為灰底（只保留一次！）
+      if (!records[key] || !records[key].__isDisabled) {
+        let clone = { ...item, __displayDate: fixDate(item["日期"]), __isDisabled: true };
+        disabled.push(clone);
+        records[key] = clone;
+      }
+    } else {
+      // 無異動則直接加入
+      records[key] = {
+        ...item,
+        __displayDate: fixDate(item["日期"]),
+        __isDisabled: false
+      };
+    }
   });
-
-  const allRows = [];
-  Object.values(groups).forEach(group => {
-    // 記錄哪些日期被異動日期覆蓋
-    const replacedDateSet = new Set();
+  // 統一排序後，計算堂次
+  let allRows = Object.values(records).concat(disabled).filter(x=>x.__displayDate);
+  // 若有同key但異動/原始重複，舊的只顯示一次
+  allRows = allRows.filter((row, idx, arr) => {
+    if (!row.__isDisabled) return true;
+    // 只留每種key的第一筆異動前紀錄
+    return arr.findIndex(x => x.__isDisabled && x.__displayDate===row.__displayDate && getCourseLabel(x)===getCourseLabel(row) && (x["教師"]||"") === (row["教師"]||"")) === idx;
+  });
+  // 按日期排序
+  allRows.sort((a, b) => a.__displayDate.localeCompare(b.__displayDate));
+  // 計算堂次
+  const courseGroup = {};
+  allRows.forEach(item => {
+    const groupKey = getCourseLabel(item) + "|" + (item["教師"]||"");
+    if (!courseGroup[groupKey]) courseGroup[groupKey] = [];
+    courseGroup[groupKey].push(item);
+  });
+  Object.values(courseGroup).forEach(group => {
+    let idx = 1;
     group.forEach(item => {
-      if (item["異動日期"]) replacedDateSet.add(fixDate(item["日期"]));
-    });
-    // 被異動掉的課標__disabled
-    group.forEach(item => {
-      if (item["異動日期"]) {
-        // 異動後資料
-        let clone = { ...item };
-        clone.__displayDate = fixDate(item["異動日期"]);
-        clone.__disabled = false;
-        allRows.push(clone);
-        // 被異動掉的課原本那筆
-        let oldClone = { ...item };
-        oldClone.__displayDate = fixDate(item["日期"]);
-        oldClone.__disabled = true;
-        allRows.push(oldClone);
-      } else if (!replacedDateSet.has(fixDate(item["日期"]))) {
-        // 沒有被異動掉，正常課
-        let clone = { ...item };
-        clone.__displayDate = fixDate(item["日期"]);
-        clone.__disabled = false;
-        allRows.push(clone);
+      if (!item.__isDisabled) {
+        item.__showIdx = idx++;
+        item.__showTotal = group.filter(x=>!x.__isDisabled).length;
       }
     });
   });
-  // 按__displayDate排序，重編堂次
-  allRows.sort((a,b) => a.__displayDate.localeCompare(b.__displayDate));
-  // 依分組重新給堂次
-  const groupByCourse = {};
-  for (let item of allRows) {
-    if (item.__disabled) continue; // 不計入被異動
-    const key = getCourseLabel(item) + '|' + (item["教師"]||"");
-    if (!groupByCourse[key]) groupByCourse[key] = [];
-    groupByCourse[key].push(item);
-  }
-  // 標記堂次
-  for (let group of Object.values(groupByCourse)) {
-    group.forEach((item, idx) => {
-      item.__showIdx = idx+1;
-      item.__showTotal = group.length;
-    });
-  }
-  // 被異動的課堂次照自己的日期順序
-  for (let item of allRows) {
-    if (item.__disabled) {
-      item.__showIdx = "";
-      item.__showTotal = "";
-    }
-  }
   return allRows;
 }
+
 let allData = [];
 let calendar = null;
 document.addEventListener('DOMContentLoaded', async function () {
   const res = await fetch(apiUrl);
   const data = await res.json();
   allData = data;
+
+  // 堂次自動重排
   const merged = mergeAndRenumber(data);
 
-  const courses = [...new Set(merged.map(item => getCourseLabel(item)))].sort((a, b) => {
+  const courses = [...new Set(merged.filter(x=>!x.__isDisabled).map(item => getCourseLabel(item)))].sort((a, b) => {
     return courseSortKey(a) > courseSortKey(b) ? 1 : -1;
   });
   const select = document.getElementById('courseSelect');
@@ -223,7 +234,7 @@ document.addEventListener('DOMContentLoaded', async function () {
 
   select.addEventListener('change', function () {
     const value = this.value;
-    const filtered = (!value) ? merged : merged.filter(item => getCourseLabel(item) === value);
+    const filtered = (!value) ? merged : merged.filter(item => getCourseLabel(item) === value || (item.__isDisabled && getCourseLabel(item) === value));
     renderCalendar(filtered);
     renderList(filtered);
   });
@@ -236,15 +247,17 @@ function renderCalendar(data) {
     const endTime = fixTime(item["異動結束時間"] || item["結束時間"]);
     const course = getCourseLabel(item);
     const status = getCourseStatus(course, date, allData);
-    const bgColor = item.__disabled ? "#868686" : getColorByName(item["課程名稱"]);
+    const bgColor = item.__isDisabled ? "#888" : getColorByName(item["課程名稱"]);
+    const txtColor = item.__isDisabled ? "#fff" : "#222";
     const classroom = item["異動教室"] || item["教室"] || "";
-    let title = `${course}\n${startTime} - ${endTime}${item["教師"] ? " " + item["教師"] : ""}${classroom ? "\n" + classroom : ""}${item.__disabled ? "\n【已異動】" : ""}`;
+    let title = `${course}\n${startTime} - ${endTime}${item["教師"] ? " " + item["教師"] : ""}${classroom ? "\n" + classroom : ""}`;
+    if (item.__isDisabled) title += "\n【已異動】";
     return {
       title: title,
       start: `${date}T${startTime}`,
       end: `${date}T${endTime}`,
-      classNames: item.__disabled ? ["disabled-bg"] : [].concat(getClass(item)),
-      extendedProps: { ...item, bg: bgColor, statusIcon: status.icon, statusLabel: status.label, course, classroom, startTime, endTime }
+      classNames: getClass(item),
+      extendedProps: { ...item, bg: bgColor, fg: txtColor, statusIcon: status.icon, statusLabel: status.label, course, classroom, startTime, endTime }
     };
   });
   if (calendar) calendar.destroy();
@@ -273,81 +286,31 @@ function renderCalendar(data) {
       if (titleNode && !titleNode.querySelector('.course-icon')) {
         titleNode.prepend(iconNode);
       }
-      // 灰底、白字
-      if (info.event.classNames && info.event.classNames.includes('disabled-bg')) {
-        info.el.classList.add('disabled-bg');
-        titleNode && (titleNode.classList.add('disabled-txt'));
-      } else {
-        info.el.style.backgroundColor = info.event.extendedProps.bg;
-        info.el.style.color = "#222";
-      }
+      info.el.style.backgroundColor = info.event.extendedProps.bg;
+      info.el.style.color = info.event.extendedProps.fg;
       info.el.style.fontWeight = "bold";
       info.el.style.borderRadius = "7px";
       info.el.style.border = "none";
       info.el.title = info.event.extendedProps.statusLabel;
       info.el.style.height = "auto";
-      // 紅字強調
-      if (info.event.extendedProps["異動教室"] && !info.event.extendedProps.__disabled) {
+      if (info.event.extendedProps.__isDisabled) {
+        info.el.style.backgroundColor = "#888";
+        info.el.style.color = "#fff";
+        if (titleNode) titleNode.style.color = "#fff";
+      }
+      // 紅字強調異動後
+      if (info.event.extendedProps["異動教室"] && info.event.extendedProps["教室"] && !info.event.extendedProps.__isDisabled) {
         titleNode.innerHTML = titleNode.innerHTML.replace(
           info.event.extendedProps["異動教室"],
           `<span class="highlight-red">${info.event.extendedProps["異動教室"]}</span>`
         );
       }
-      if (info.event.extendedProps["異動起始時間"] && !info.event.extendedProps.__disabled) {
+      if (info.event.extendedProps["異動起始時間"] && !info.event.extendedProps.__isDisabled) {
         titleNode.innerHTML = titleNode.innerHTML.replace(
           info.event.extendedProps["異動起始時間"],
           `<span class="highlight-red">${info.event.extendedProps["異動起始時間"]}</span>`
         );
       }
-      if (info.event.extendedProps["異動結束時間"] && !info.event.extendedProps.__disabled) {
+      if (info.event.extendedProps["異動結束時間"] && !info.event.extendedProps.__isDisabled) {
         titleNode.innerHTML = titleNode.innerHTML.replace(
-          info.event.extendedProps["異動結束時間"],
-          `<span class="highlight-red">${info.event.extendedProps["異動結束時間"]}</span>`
-        );
-      }
-      titleNode && (titleNode.style.whiteSpace = "pre-line");
-    }
-  });
-  calendar.render();
-}
-
-function renderList(data) {
-  let html = `<table>
-  <tr>
-    <th>狀態</th>
-    <th>日期</th>
-    <th>時間</th>
-    <th>課程名稱</th>
-    <th>教師</th>
-    <th>教室</th>
-    <th>堂次</th>
-    <th>備註</th>
-  </tr>`;
-  for (let item of data) {
-    const date = item.__displayDate;
-    const startTime = fixTime(item["異動起始時間"] || item["起始時間"]);
-    const endTime = fixTime(item["異動結束時間"] || item["結束時間"]);
-    const classroom = item["異動教室"] || item["教室"] || "";
-    const course = getCourseLabel(item);
-    const isDisabled = item.__disabled;
-    html += `<tr${isDisabled ? ' class="row-disabled"' : ''}>
-      <td style="font-size:1.3em;">🟡</td>
-      <td${item["異動日期"] ? ' class="highlight-red"' : ''}>${date}${isDisabled ? '<span class="disabled-label">已異動</span>' : ''}</td>
-      <td>
-        <span${item["異動起始時間"] ? ' class="highlight-red"' : ''}>${startTime}</span>
-        -
-        <span${item["異動結束時間"] ? ' class="highlight-red"' : ''}>${endTime}</span>
-      </td>
-      <td${isDisabled ? ' class="disabled-txt"' : ''}>${course}</td>
-      <td>${item["教師"]||""}</td>
-      <td${item["異動教室"] ? ' class="highlight-red"' : ''}>${classroom}</td>
-      <td>${item.__showIdx ? item.__showIdx + '/' + item.__showTotal : ""}</td>
-      <td>${item["備註"]||""}</td>
-    </tr>`;
-  }
-  html += `</table>`;
-  document.getElementById('list-content').innerHTML = html;
-}
-</script>
-</body>
-</html>
+          info
